--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,45 @@
-absl-py==2.1.0
-affine==2.4.0
-annotated-types==0.6.0
-anyio==4.2.0
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==23.2.0
-Automat==22.10.0
-beautifulsoup4==4.12.3
-cachetools==5.3.2
-calmjs.parse==1.3.1
-certifi==2023.11.17
-cffi==1.16.0
+attrs==24.2.0
+Automat==24.8.1
+certifi==2024.8.30
+cffi==1.17.0
 charset-normalizer==3.3.2
-chompjs==1.2.3
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-comm==0.2.1
+chompjs==1.3.0
 constantly==23.10.4
-contextily==1.5.0
-contourpy==1.2.0
-cryptography==42.0.2
+cryptography==43.0.0
 cssselect==1.2.0
-cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
-exceptiongroup==1.2.0
-executing==2.0.1
-filelock==3.13.1
-fiona==1.9.5
-flatbuffers==23.5.26
-fonttools==4.47.2
-gast==0.5.4
-gensim==4.3.2
-geographiclib==2.0
-geopandas==0.14.3
-geopy==2.4.1
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
+defusedxml==0.7.1
+filelock==3.15.4
 greenlet==3.0.3
-grpcio==1.60.1
-h11==0.14.0
-h2==4.1.0
-h5py==3.10.0
-hpack==4.0.0
-httpcore==1.0.3
-httpx==0.26.0
-hyperframe==6.0.1
 hyperlink==21.0.0
-idna==3.6
-incremental==22.10.0
-ipykernel==6.29.2
-ipython==8.21.0
-itemadapter==0.8.0
-itemloaders==1.1.0
-jedi==0.19.1
+idna==3.8
+incremental==24.7.2
+itemadapter==0.9.0
+itemloaders==1.3.1
 jmespath==1.0.1
-joblib==1.3.2
-js2xml==0.5.0
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-keras==2.15.0
-kiwisolver==1.4.5
-libclang==16.0.6
-linecache2==1.0.0
-loguru==0.7.2
-lxml==5.1.0
-Markdown==3.5.2
-MarkupSafe==2.1.4
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mercantile==1.2.1
-ml-dtypes==0.2.0
-mock==5.1.0
-nest-asyncio==1.6.0
-nltk==3.8.1
-numpy==1.26.3
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.2
-pandas==2.2.0
-parsel==1.8.1
-parso==0.8.3
-pexpect==4.9.0
-pillow==10.2.0
-platformdirs==4.2.0
-playwright==1.41.2
-ply==3.11
-prompt-toolkit==3.0.43
-Protego==0.3.0
-protobuf==4.23.4
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==15.0.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.6.4
-pydantic_core==2.16.3
+lxml==5.3.0
+packaging==24.1
+parsel==1.9.1
+playwright==1.46.0
+Protego==0.3.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
 PyDispatcher==2.0.7
-pyee==11.0.1
-Pygments==2.17.2
-pyOpenSSL==24.0.0
-pyparsing==3.1.1
-pyproj==3.6.1
-python-dateutil==2.8.2
-pytz==2023.4
-pyzmq==25.1.2
-queuelib==1.6.2
-rasterio==1.3.9
-reactor==0.1.4
-regex==2023.12.25
-requests==2.31.0
-requests-file==2.0.0
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn==1.4.0
-scipy==1.12.0
-Scrapy==2.11.1
-scrapy-playwright==0.0.34
+pyee==12.0.0
+pyOpenSSL==24.2.1
+queuelib==1.7.0
+requests==2.32.3
+requests-file==2.1.0
+Scrapy==2.11.2
+scrapy-playwright==0.0.41
 scrapy-user-agents==0.1.1
-seaborn==0.13.2
 service-identity==24.1.0
-shapely==2.0.2
-six==1.16.0
-smart-open==6.4.0
-sniffio==1.3.0
-snuggs==1.4.7
-soupsieve==2.5
-stack-data==0.6.3
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0.post1
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.35.0
-termcolor==2.4.0
-threadpoolctl==3.2.0
-tldextract==5.1.1
-tornado==6.4
-tqdm==4.66.1
-traceback2==1.4.0
-traitlets==5.14.1
-Twisted==22.10.0
-typing_extensions==4.9.0
-tzdata==2023.4
+tldextract==5.1.2
+tomli==2.0.1
+Twisted==24.7.0
+typing_extensions==4.12.2
 ua-parser==0.18.0
-unittest2==1.1.0
-urllib3==2.2.0
+urllib3==2.2.2
 user-agents==2.2.0
-w3lib==2.1.2
-wcwidth==0.2.13
-Werkzeug==3.0.1
-wrapt==1.14.1
-xyzservices==2023.10.1
-zope.interface==6.1
+w3lib==2.2.1
+zope.interface==7.0.3
