--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,93 @@
+annotated-types==0.7.0
+asttokens==2.4.1
 attrs==24.2.0
 Automat==24.8.1
 certifi==2024.8.30
 cffi==1.17.0
 charset-normalizer==3.3.2
 chompjs==1.3.0
+comm==0.2.2
 constantly==23.10.4
+contourpy==1.3.0
 cryptography==43.0.0
 cssselect==1.2.0
+cycler==0.12.1
+debugpy==1.8.5
+decorator==5.1.1
 defusedxml==0.7.1
+exceptiongroup==1.2.2
+executing==2.1.0
 filelock==3.15.4
+fonttools==4.53.1
 greenlet==3.0.3
 hyperlink==21.0.0
 idna==3.8
 incremental==24.7.2
+ipykernel==6.29.5
+ipython==8.27.0
 itemadapter==0.9.0
 itemloaders==1.3.1
+jedi==0.19.1
 jmespath==1.0.1
+joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.6
 lxml==5.3.0
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==2.1.1
+nvidia-nccl-cu12==2.22.3
 packaging==24.1
+pandas==2.2.2
 parsel==1.9.1
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.2.2
 playwright==1.46.0
+prompt_toolkit==3.0.47
 Protego==0.3.1
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
 PyDispatcher==2.0.7
 pyee==12.0.0
+Pygments==2.18.0
 pyOpenSSL==24.2.1
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pyzmq==26.2.0
 queuelib==1.7.0
 requests==2.32.3
 requests-file==2.1.0
+scikit-learn==1.5.1
+scipy==1.14.1
 Scrapy==2.11.2
 scrapy-playwright==0.0.41
 scrapy-user-agents==0.1.1
 service-identity==24.1.0
+six==1.16.0
+stack-data==0.6.3
+threadpoolctl==3.5.0
 tldextract==5.1.2
 tomli==2.0.1
+tornado==6.4.1
+traitlets==5.14.3
 Twisted==24.7.0
 typing_extensions==4.12.2
+tzdata==2024.1
 ua-parser==0.18.0
 urllib3==2.2.2
 user-agents==2.2.0
 w3lib==2.2.1
+wcwidth==0.2.13
+xgboost==2.1.1
 zope.interface==7.0.3
