--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+absl-py==2.1.0
+affine==2.4.0
 annotated-types==0.7.0
 asttokens==2.4.1
+astunparse==1.6.3
 attrs==24.2.0
 Automat==24.8.1
 certifi==2024.8.30
 cffi==1.17.0
 charset-normalizer==3.3.2
 chompjs==1.3.0
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.2.2
 constantly==23.10.4
+contextily==1.6.2
 contourpy==1.3.0
 cryptography==43.0.0
 cssselect==1.2.0
@@ -18,8 +25,16 @@ defusedxml==0.7.1
 exceptiongroup==1.2.2
 executing==2.1.0
 filelock==3.15.4
+flatbuffers==24.3.25
 fonttools==4.53.1
+gast==0.6.0
+geographiclib==2.0
+geopandas==1.0.1
+geopy==2.4.1
+google-pasta==0.2.0
 greenlet==3.0.3
+grpcio==1.66.1
+h5py==3.11.0
 hyperlink==21.0.0
 idna==3.8
 incremental==24.7.2
@@ -32,13 +47,24 @@ jmespath==1.0.1
 joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+keras==3.5.0
 kiwisolver==1.4.6
+libclang==18.1.1
 lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+mercantile==1.2.1
+ml-dtypes==0.4.0
+namex==0.0.8
 nest-asyncio==1.6.0
-numpy==2.1.1
+numpy==1.26.4
 nvidia-nccl-cu12==2.22.3
+opt-einsum==3.3.0
+optree==0.12.1
 packaging==24.1
 pandas==2.2.2
 parsel==1.9.1
@@ -49,6 +75,7 @@ platformdirs==4.2.2
 playwright==1.46.0
 prompt_toolkit==3.0.47
 Protego==0.3.1
+protobuf==4.25.4
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -60,22 +87,34 @@ pydantic_core==2.20.1
 PyDispatcher==2.0.7
 pyee==12.0.0
 Pygments==2.18.0
+pyogrio==0.9.0
 pyOpenSSL==24.2.1
 pyparsing==3.1.4
+pyproj==3.6.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==26.2.0
 queuelib==1.7.0
+rasterio==1.3.11
 requests==2.32.3
 requests-file==2.1.0
+rich==13.8.0
 scikit-learn==1.5.1
 scipy==1.14.1
 Scrapy==2.11.2
 scrapy-playwright==0.0.41
 scrapy-user-agents==0.1.1
+seaborn==0.13.2
 service-identity==24.1.0
+shapely==2.0.6
 six==1.16.0
+snuggs==1.4.7
 stack-data==0.6.3
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.4.0
 threadpoolctl==3.5.0
 tldextract==5.1.2
 tomli==2.0.1
@@ -89,5 +128,8 @@ urllib3==2.2.2
 user-agents==2.2.0
 w3lib==2.2.1
 wcwidth==0.2.13
+Werkzeug==3.0.4
+wrapt==1.16.0
 xgboost==2.1.1
+xyzservices==2024.9.0
 zope.interface==7.0.3
